# remnant2-editor

./: .gitignore  LICENSE  README.md  pyproject.toml
editor/: compression.py  const.py  log.py  materials.py  prism_editor.py  prisms.py  reader.py  steam_storage.py  world_analyzer.py
editor/io/: __init__.py  reader.py  writer.py
editor/model/: __init__.py  memory.py  parts.py  persistence.py  profile_save.py  properties.py  save_data.py  save_file.py  uobject.py
scripts/: modify_prism_segment.py  print_materials.py  print_prisms.py  print_scrap.py  world_analyzer.py
tests/: conftest.py  test_compression.py  test_prisms.py  test_properties.py  test_save_file.py  test_scrap.py  test_steam_storage.py  test_writer.py
tests/fixtures/: profile.sav
